# waterwatch-kaggle

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-cloud.txt  requirements.txt  setup.sh
deploy/: cloudbuild.yaml  scheduler.yaml
docs/: architecture.md
eval/: run_eval.py
eval/dataset/: extra_cases.json
frontend/: app.js  index.html  styles.css
mcp_server/: __init__.py  server.py
tests/: conftest.py  test_api.py  test_data_layer.py  test_pipeline.py  test_verifier.py
waterwatch/: __init__.py  config.py  data_layer.py  exceptions.py  llm.py  main.py  prompts.py  schemas.py  services.py  store.py
waterwatch/agents/: __init__.py  action.py  base.py  health.py  orchestrator.py  parser.py  standards.py  verifier.py  watchdog.py
waterwatch/data/: bis_10500.json  health_kb.json  sample_reports.json  treatment_kb.json
waterwatch/routers/: __init__.py  analyze.py  complaints.py  meta.py
